# kate-gpg-password

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  kategpgpassword.cpp  kategpgpassword.hpp  kategpgpassword.json  ui.rc
